--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.12.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
